--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,8 @@
 
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Koulen&family=Rubik:ital,wght@1,300&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Koulen&family=Roboto:wght@300&family=Rubik:ital,wght@1,300&display=swap" rel="stylesheet">
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" crossorigin="use-credentials"/>
 
