--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -26,7 +26,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Koulen&family=Roboto:wght@300&family=Rubik:ital,wght@1,300&display=swap" rel="stylesheet">
 
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" crossorigin="use-credentials"/>
+   <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" crossorigin="use-credentials"/> -->
 
     <script src="https://kit.fontawesome.com/a7cfe14bd2.js" crossorigin="anonymous"></script>
     <!--
@@ -38,7 +38,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Art Hub</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
